# lms-migration

./: .env.example  .gitignore  README.md  launch-ui.command  lms-migration.code-workspace  pyproject.toml
.github/: copilot-instructions.md
docs/: app-roadmap.md  demo-runbook.md  lms-migration-custom-instructions-draft.md  pdf-best-practices-initial-findings.md  security-and-governance.md
examples/: best_practices_example.csv
rules/: default_rules.json  policy_profiles.json  sinclair_pilot_rules.json  template_asset_aliases.json
src/lms_migration/: __init__.py  approval_report.py  best_practices.py  canvas_api.py  canvas_live_audit.py  canvas_post_import.py  canvas_preview.py  canvas_snapshot.py  cli.py  css_parser.py  example_corpus.py  fix_checklist.py  html_tools.py  math_audit.py  math_tools.py  pattern_report.py  pipeline.py  policy_profiles.py  reference_audit.py  reference_docs.py  review_pack.py  review_writeback.py  rules.py  safe_summary.py  template_merger.py  template_overlay.py  template_package.py  template_standards.py  training_corpus.py  ui.py  visual_audit.py
tests/: test_css_parser.py  test_html_tools.py
