[project]
name = "lms-migration-pilot"
version = "0.1.0"
description = "Local-first D2L to Canvas migration pilot toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "black>=24.0",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
lms-migrate = "lms_migration.cli:main"
lms-best-practices-audit = "lms_migration.best_practices:main"
lms-safe-summary = "lms_migration.safe_summary:main"
lms-migrate-ui = "lms_migration.ui:main"
lms-reference-audit = "lms_migration.reference_audit:main"
lms-build-fix-checklist = "lms_migration.fix_checklist:main"
lms-canvas-auto-relink = "lms_migration.canvas_post_import:main"
lms-canvas-live-audit = "lms_migration.canvas_live_audit:main"
lms-canvas-snapshot = "lms_migration.canvas_snapshot:main"
lms-analyze-examples = "lms_migration.example_corpus:main"
lms-analyze-template-package = "lms_migration.template_package:main"
lms-visual-audit = "lms_migration.visual_audit:main"
lms-canvas-preview = "lms_migration.canvas_preview:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
